# FlavorBuilder

./: LICENSE  README.md  pyproject.toml
FastEvaluation/: FastEvalModel2Mass.ipynb
ModelsInPaper/: A4XZNtab9.txt  A4xZ4tab2.txt  T19XZ4_tab10.txt  T19XZ4tab10.txt  T19xZ4_tab5.txt  T19xZ4tab5.txt
Tutorials/: TutorialModel2Mass.ipynb  TutorialPyDiscrete.ipynb
src/FlavorBuilder/: __init__.py
src/FlavorBuilder/Model2Mass/: Model2Mass.py  __init__.py
src/FlavorBuilder/PyDiscrete/: PyDiscrete.py  __init__.py
src/FlavorBuilder/PyDiscrete/GAP-script/: extractGroupDataPy.gap
