[build-system]
# --------------------------------------------------------------------
# Build backend configuration (PEP 518 / PEP 621)
# setuptools is used for building the package; wheel for distribution.
# --------------------------------------------------------------------
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"


[project]
# --------------------------------------------------------------------
# Basic project metadata
# --------------------------------------------------------------------
name = "FlavorBuilder"
version = "0.1.0"
description = "Finite-group and model-building utilities interfacing with GAP"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Victoria Knapp Pérez", email = "vknapppe@uci.edu" },
  { name = "Jake Rudolph", email = "jirudolp@uci.edu"}
]

keywords = [
  "particle-physics",
  "group-theory",
  "flavor-models",
  "GAP",
  "symmetry",
  "mass-matrices",
  "beyond-standard-model",
  "physics"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics"
]

[tool.setuptools]
# --------------------------------------------------------------------
# Source layout and packaging configuration
# --------------------------------------------------------------------
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
# Automatically discover all packages under src/
where = ["src"]


[tool.setuptools.package-data]
# Include GAP script inside the built wheel
"FlavorBuilder.PyDiscrete" = ["GAP-Script/*.gap"]


[project.urls]
# --------------------------------------------------------------------
# Optional: for GitHub / PyPI project page links
# --------------------------------------------------------------------
Homepage = "https://github.com/victoria-kp/FlavorBuilder"
Repository = "https://github.com/victoria-kp/FlavorBuilder"
Issues = "https://github.com/victoria-kp/FlavorBuilder"
