[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FlavorBuilder"
version = "0.3.0"
description = "Finite-group and model-building utilities interfacing with GAP"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

dependencies = [
    "numpy",
    "sympy",
    "pandas",
    "pickle",
]

authors = [
  { name = "Victoria Knapp Pérez", email = "vknapppe@uci.edu" },
  { name = "Jake Rudolph", email = "jirudolp@uci.edu" }
]

keywords = [
  "particle-physics",
  "group-theory",
  "flavor-models",
  "GAP",
  "symmetry",
  "mass-matrices",
  "beyond-standard-model",
  "physics",
  "Amber"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.optional-dependencies]
notebook = ["IPython"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"FlavorBuilder.PyDiscrete" = ["GAP-Script/*.gap"]

[project.urls]
Homepage = "https://github.com/victoria-kp/FlavorBuilder"
Repository = "https://github.com/victoria-kp/FlavorBuilder"
Issues = "https://github.com/victoria-kp/FlavorBuilder"
